disable/ingress-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    ingress.kubernetes.io/class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api/hello
            backend:
              serviceName: demoapi-service
              servicePort: 80
